meu segundo commit

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -4,7 +4,7 @@
     <title>Locadora de Carros</title>
 </head>
 <body>
-    <h1>Bem-vindo à Locadora de Carros</h1>
+    <h1>Bem-vindo à Locadora de Carros: Lightning McQueen!</h1>
     <p>Confira nossos carros disponíveis:</p>
 
     <ul>
