--- a/public/style.css
+++ b/public/style.css
@@ -5,8 +5,8 @@ body {
 }
 
 header {
-    background-color: #333;
-    color: #fff;
+    background-color: rgb(19, 166, 224);
+    color: rgb(43, 82, 126);
     text-align: center;
     padding: 10px;
 }
@@ -17,7 +17,7 @@ main {
 
 footer {
     background-color: #333;
-    color: #fff;
+    color: rgb(67, 98, 133);
     text-align: center;
     padding: 10px;
     position: fixed;
